--- a/app/globals.css
+++ b/app/globals.css
@@ -12,20 +12,45 @@
   @apply text-orange-500 text-2xl font-semibold;
 }
 .pgx-search-login-group {
-  @apply flex flex-col md:flex-row items-center justify-center;
+  @apply flex flex-col md:flex-row items-center justify-center md:justify-between absolute top-16 left-0 md:relative md:top-0 bg-gray-700 md:bg-transparent py-7 md:py-0 w-full md:w-5/6 lg:w-3/4 space-y-3 md:space-y-0 px-6 md:px-1;
 }
+
 .pgx-search-group {
-  @apply flex items-center relative;
+  @apply flex items-center relative w-full md:w-4/6;
 }
 .pgx-search-icon {
   @apply m-auto absolute right-3;
 }
 .pgx-search-input {
-  @apply rounded-lg px-3 py-1.5 pr-10 w-full md:w-36 lg:w-72 bg-transparent outline-2 outline-orange-500 outline text-white;
+  @apply rounded-lg px-3 py-1.5 pr-10 w-full bg-transparent outline-2 outline-orange-500 outline text-white;
 }
 .pgx-search-input::placeholder {
   @apply text-sm text-white;
 }
 .pgx-menu-burger {
-  @apply flex items-center justify-center w-fit h-fit;
+  @apply flex md:hidden items-center justify-center w-fit h-fit;
+}
+.pgx-image-login-group {
+  @apply flex flex-col items-center justify-center md:flex-row w-full md:w-fit space-y-3 md:space-y-0;
+}
+.pgx-btn {
+  @apply w-full px-4 py-2 md:px-6 md:w-fit;
+}
+.pgx-image-group {
+  @apply w-full md:w-fit flex hidden items-center flex-col md:flex-row text-white space-y-3 md:space-y-0;
+}
+.pgx-avatar-group {
+  @apply flex items-center justify-center w-full md:w-fit;
+}
+.pgx-username {
+  @apply px-3 py-1.5 mr-1;
+}
+.pgx-user-avatar {
+  @apply w-12 h-12 rounded-full border-2 border-white;
+}
+.pgx-login-btn {
+  @apply text-white md:ml-2 rounded-full transition-all duration-200 outline outline-2 outline-orange-500  hover:outline-none hover:bg-orange-500;
+}
+.pgx-logout-btn {
+  @apply text-white md:ml-2 rounded-full transition-all duration-200 bg-orange-500 hover:bg-orange-400;
 }
