--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@
   @apply text-orange-500 text-2xl font-semibold;
 }
 .pgx-search-login-group {
-  @apply flex flex-col md:flex-row items-center justify-center md:justify-between absolute top-16 left-0 md:relative md:top-0 bg-gray-700 md:bg-transparent py-7 md:py-0 w-full md:w-5/6 lg:w-3/4 space-y-3 md:space-y-0 px-6 md:px-1;
+  @apply flex-col md:flex-row items-center justify-center md:justify-between absolute top-16 left-0 md:relative md:top-0 bg-gray-700 md:bg-transparent py-7 md:py-0 w-full h-auto md:w-5/6 lg:w-3/4 space-y-3 md:space-y-0 px-6 md:px-1;
 }
 
 .pgx-search-group {
