--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@
   @apply text-orange-500 text-2xl font-semibold;
 }
 .pgx-search-login-group {
-  @apply flex-col md:flex-row items-center justify-center md:justify-between absolute top-16 left-0 md:relative md:top-0 bg-gray-700 md:bg-transparent py-7 md:py-0 w-full h-auto md:w-5/6 lg:w-3/4 space-y-3 md:space-y-0 px-6 md:px-1;
+  @apply flex-col md:flex md:flex-row items-center justify-center md:justify-between absolute top-16 left-0 md:relative md:top-0 bg-gray-700 md:bg-transparent py-7 md:py-0 w-full h-screen md:h-auto md:w-5/6 lg:w-3/4 space-y-3 md:space-y-0 px-6 md:px-1;
 }
 
 .pgx-search-group {
@@ -51,6 +51,7 @@
 .pgx-login-btn {
   @apply text-white flex items-center justify-center md:ml-2 rounded-full transition-all duration-200 bg-orange-500 hover:bg-orange-400;
 }
+
 .pgx-logout-btn {
   @apply text-white md:ml-2 rounded-full transition-all duration-200 bg-orange-500 hover:bg-orange-400;
 }
@@ -69,4 +70,18 @@
 }
 .pgx-hr {
   @apply w-full my-3 md:hidden border border-slate-600;
+}
+
+.pgx-footer {
+  @apply flex flex-col items-center justify-center space-y-2.5 bg-gray-700 text-gray-300 py-8;
+}
+.pgx-foot-links {
+  @apply flex flex-col items-center justify-center md:flex-row space-y-1.5 md:space-y-0 md:space-x-3 hover:underline;
+}
+
+.pgx-social-links {
+  @apply flex items-center justify-center space-x-3 hover:text-white;
+}
+.pgx-social-icons {
+  @apply text-2xl hover:text-white hover:scale-150;
 }
