Populated the gallery with the API images

--- a/app/globals.css
+++ b/app/globals.css
@@ -85,11 +85,9 @@
 .pgx-gallery {
   @apply grid w-full max-w-full grid-cols-2 md:grid-cols-3 lg:grid-cols-4 justify-items-center gap-3;
 }
-/* .pgx-gallery > * + * {
-  @apply my-3;
-} */
+
 .pgx-gallery-card {
-  @apply w-[9rem] h-36 sm:w-[17.5rem] md:w-[14rem] xl:w-64 sm:h-auto my-1.5 relative;
+  @apply w-[9rem] sm:w-[17.5rem] md:w-[14rem] xl:w-64 h-auto my-1.5 relative;
 }
 .pgx-gallery-image {
   @apply w-full h-full;
