--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@
 }
 
 .pgx-search-group {
-  @apply flex items-center relative w-full md:w-4/6;
+  @apply flex items-center relative w-full md:w-3/6;
 }
 .pgx-search-icon {
   @apply m-auto absolute right-3;
@@ -37,7 +37,7 @@
   @apply w-full px-4 py-2 md:px-6 md:w-fit;
 }
 .pgx-image-group {
-  @apply w-full md:w-fit flex hidden items-center flex-col md:flex-row text-white space-y-3 md:space-y-0;
+  @apply w-full md:w-fit flex items-center flex-col md:flex-row text-white space-y-3 md:space-y-0;
 }
 .pgx-avatar-group {
   @apply flex items-center justify-center w-full md:w-fit;
